# RustBasics

alarm_clock/: Cargo.toml
alarm_clock/src/: main.rs
area/src/: main.rs
assignement/area/: Cargo.toml
assignement/brainfuck/: Cargo.toml
assignement/fibonacci/: Cargo.toml
assignement/generics/: Cargo.toml
assignement/pig_latin/: Cargo.toml
assignement/struct_exemple/: Cargo.toml
assignement/text_interface/: Cargo.toml
assignement/vec_int/: Cargo.toml
caesar_cypher/: Cargo.toml
caesar_cypher/src/: main.rs
celsius_fahrenheit/: Cargo.toml
coin_flip_simulation/: Cargo.toml
coin_flip_simulation/src/: main.rs
event-loop/: Cargo.toml
event-loop/src/: lib.rs  main.rs
exp-system/: Cargo.toml
exp-system/src/: lib.rs  main.rs
expert-system/: Cargo.toml
expert-system/exemples/: 1.txt  2.txt  3.txt  5.txt
expert-system/src/: config.rs  lib.rs  main.rs  parser.rs
fibonacci/src/: main.rs
guess/: Cargo.toml
helllo-world/: Cargo.toml
learn/communicator/: Cargo.toml
learn/control_flow/: Cargo.toml
learn/enums/: Cargo.toml
learn/functions/: Cargo.toml
learn/hashmap/: Cargo.toml
learn/match_expression/: Cargo.toml
learn/ownership/: Cargo.toml
learn/slices/: Cargo.toml
learn/string/: Cargo.toml
lyrics/: Cargo.toml
lyrics/src/: main.rs
minigrep/: Cargo.toml
primal/: Cargo.toml
product_manager/: Cargo.toml
product_manager/src/: lib.rs  main.rs
product_manager/src/products/: cache.rs  mod.rs
testwasm/: Cargo.toml  LICENSE_MIT
tgvmax_notifier/: Cargo.toml  gare.txt
vec_int/: Cargo.toml
web_app/: Cargo.toml
(+46 files in other folders)
