[package]
name = "product_manager"
version = "0.1.0"
authors = ["cmalfroy <cmalfroy@student.42.fr>"]

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = "0.3"
lazy_static = "1.1.0"